--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -76,7 +76,8 @@
 		<br>
 		<div class="textSize textColorB">
 			<p>Ser líderes en el desarrollo de soluciones y productos innovadores de Tecnologías de la información a nivel Nacional y
-				global.</p>
+				global.
+			</p>
 			<p>Ser uno de los mejores lugares para trabajar.</p>
 		</div>
 	</div>
@@ -112,6 +113,33 @@
 		</p>
 	</div>
 </div>
-<app-share-article></app-share-article>
 
-<app-comment-box></app-comment-box>
+<div class="containerInfoA mdl-shadow--2dp textColorB">
+	<h3 class="titleB b">Alianzas</h3>
+	<div>
+		<h4>CONTROL BI – COSTA RICA</h4>
+		<p>
+			Descripción y logros: <br> En 2016, se firmó contrato con Control BI, empresa Costarricense, especializada en SOFOMES,
+			SOFIPES y SOFOLES (casas de ahorro) para en conjunto utilizar el Core bancario y contabilidad para adecuarlo con la facturación
+			electrónica. Esta alianza le representa a Teambits el ofrecer soluciones en el sector bancario con el crecimiento a servicios
+			usando el telefonía celular y dispositivos móviles, con clientes en México, Centroamérica y Suramérica.
+		</p>
+	</div>
+	<div>
+		<h4>MICROSOFT</h4>
+		<p>
+			Descripción y logros: <br> En 2017, Teambits S.C. firmó contrato con Microsoft México para promover servicios en la nube
+			a través de Azure de Microsoft.
+		</p>
+	</div>
+	<div>
+		<h4>NephosIT</h4>
+		<p>
+			Nuestra alianza con Nephos-IT nos permite ofrecer a nuestros clientes opciones competitivas en soluciones de
+			HW en la nube así como venta de equipo hiperconvergente. <br>
+			En conjunto hemos logrado mantener el nivel esperado de satisfacción del cliente, sistemas estables, disponibilidad
+			7x24.
+		</p>
+	</div>
+</div>
+<br>
