--- a/src/app/components/erp/erp.component.html
+++ b/src/app/components/erp/erp.component.html
@@ -1,32 +1,297 @@
+<div class="mdl-card__title robotoFont title mdl-shadow--8dp textColorB">
 
-
-<div class="mdl-card__title robotoFont title mdl-shadow--8dp textColorB">ERP FusiónPro</div>
+	ERP FusiónPro</div>
 <div class="container">
-  <div class="containerB">
+	<div class="containerB">
 
-    <div class="botones">
-      <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+		<div class="botones">
+			<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
         <div class="robotoFont textColorB"> Descarga </div>
       </button>
-      <div class="dialog textColor">Demo gratuito</div>
-    </div>
+			<div class="dialog textColor">Demo gratuito</div>
+		</div>
 
-    <div class="botones">
-      <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+		<div class="botones">
+			<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
         <div class="robotoFont textColorB"> Solicita </div>
       </button>
-      <div class="dialog textColor">Versión completa</div>
-    </div>
+			<div class="dialog textColor">Versión completa</div>
+		</div>
 
-  </div>
+	</div>
 
 </div>
 <div class="robotoFont textColor description">
-  El crowdeling es un modelo alternativo de inversión y financiamiento. Una forma de inversión 
-  colectiva en la que varios particulares y/o empresas invierten en forma de préstamo a particulares 
-  o personas morales. Este modelos tiene auge en Europa y Estados Unidos principalmente y su 
-  fundamento es mediante la utilización de plataformas Web Multicanales,
+	<h1>ERP FusiónPro</h1>
+	<h3>Enterprise Resource Planning</h3>
+	<p>FusiónPro es una herramienta para la planeación de recursos en todas las areas que compone una empresa, como lo son Inventarios,
+		Ventas, Facturación, Nómina, Contabilidad, Estados Financieros, de tal forma que provee información en el momento, para
+		la toma de decisiones <br> Está construida de forma modular, es decir, puede desarrollar sus funciones de forma independiente,
+		en unión de otros sistemas, o bien, de otros módulos de FusiónPro:
+	</p>
+	<br>
+	<h3>Servicios de FusiónPro ofrecen</h3>
+	<h4>- En la Nube, con todas las ventajas que ofrece:</h4>
+	<ul>
+		<li>Acceso desde cualquier parte del mundo</li>
+		<li>Ahorros en la compra de Hardware</li>
+		<li>Ahorros por la compra de licencias de Software</li>
+		<li>Seguridad</li>
+		<li>Flexibilidad para incrementar recursos asignados (Hardware y Software)</li>
+		<li>Respuesta a dudas de forma rápida y sencilla</li>
+		<li>Características de su equipo para acceso en la nube:</li>
+		<li>PC o LapTop.</li>
+		<li>4GB de Memoria</li>
+		<li>Micro Procesador 1.6 Ghz</li>
+		<li>Disco Duro de 250 GB </li>
+		<li>Windows 7</li>
+	</ul>
+	<br>
+	<h4>- Instalada en el servidor del cliente:</h4>
+	<ul>
+		<li>Bajo protección de la empresa.</li>
+		<li>Requisitos mínimos de hardware.</li>
+		<li>Costos de acuerdo a sus necesidades.</li>
+	</ul>
+	<br>
+	<h4>Características:</h4>
+	<ul>
+		<li>Al ser propietarios de código, este puede modificarse para dar la funcionalidad que el cliente requiera.</li>
+		<li>La automatización de los procesos permita ahora a los usuarios supervisar y autorizar los movimientos.</li>
+		<li>Altamente seguro y confiable (los archivos se encriptan).</li>
+		<li>Calendarización de facturas y procesos.</li>
+		<li>Acceso a usuarios por jerarquía.</li>
+		<li>Fácilmente escalable ante el crecimiento.</li>
+		<li>Rapidez en el procesamiento.</li>
+		<li>Multiempresa</li>
+		<li>Multi Moneda </li>
+		<li>Configurable </li>
+		<li>Parametrizable</li>
+		<li>Compartir inf. Entre empresas (Catálogos)</li>
+	</ul>
+	<br>
+	<h4>Información para el Consejo de Administración:</h4>
+	<ul>
+		<li>Información real y actualizada para la toma de decisiones.</li>
+		<li>Análisis de la situación financiera en tiempo real.</li>
+		<li>Gráficas de resultados por fecha y/o sucursal.</li>
+		<li>Análisis de productividad por empleado, por área, por producto.</li>
+		<li>Análisis de cartera y predicciones de su comportamiento.</li>
+		<li>Cuadro de mando para visión general de la empresa.</li>
+	</ul>
+	<br>
+	<h4>Dirección General y Gerencias</h4>
+	<ul>
+		<li>Información para la toma de decisiones en cualquier momento.</li>
+		<li>Sistema confiable con exactitud en los cálculos.</li>
+		<li>Integridad de información en todas las áreas, en tiempo real.</li>
+		<li>Reportes de morosidad de la cartera.</li>
+		<li>Gráficas de colocación por ejecutivo, producto, fecha y sucursal o agencia.</li>
+		<li>Situación financiera general y por sucursal o gerencia.</li>
+		<li>Calificación de la cartera y de los clientes.</li>
+	</ul>
+	<br>
+	<h4>Operaciones</h4>
+	<ul>
+		<li>Información exacta y en línea.</li>
+		<li>Procesos ágiles que aumentan la eficiencia.</li>
+		<li>Sistema con alto desempeño.</li>
+		<li>Disminución de los tiempos de cierre de mes de días a minutos.</li>
+		<li>Análisis detallado de la morosidad de la cartera.</li>
+		<li>Colaboradores más eficientes y motivados.</li>
+		<li>Trazabilidad total de las operaciones gracias a una bitácora de acciones.</li>
+	</ul>
+	<br>
+	<h2><strong>Módulos FusiónPro</strong></h2>
+	<br>
 </div>
+	<div class="mdl-grid textColor">
+		<div class="mdl-cell mdl-cell--6-col">
+			<div class="titulos mdl-shadow--2dp">
+				<img src="assets/Cuentas por Cobrar.png" width="100" height="100" alt="Cuentas por cobrar">
+				<h4 class="titulo">Cuentas x Cobrar</h4>
+			</div>
+			<ul>
+				<li>Registro de Cargos y Abonos </li>
+				<li>Resumen de saldos</li>
+				<li>Consulta de saldos por cliente, cadena, cliente documento, </li>
+				<li>Depuración de saldos</li>
+				<li>Depuración del histórico</li>
+				<li>Comisiones (Gestión y Reportes)</li>
+				<li>Definición contable</li>
+				<li>Afectación contable y  por empleado</li>
+				<li>Pagos de cliente banco</li>
+				<li>Pago de varios clientes</li>
+				<li>Aplicación de pagos</li>
+				<li>Aplicación de pagos autorizados</li>
+				<li>Reportes</li>
+				<li>Movimientos </li>
+				<li>Analítico x cliente y filial</li>
+				<li>Resumen de cliente y estado de cuenta</li>
+				<li>Cuenta, Saldos, Vencidos cliente, Vencido Fecha</li>
+			</ul>
+		</div>
+		<div class="mdl-cell mdl-cell--6-col">
+			<div class="titulos mdl-shadow--2dp">
+				<img src="assets/Cuentas por Pagar.png" width="100" height="100" alt="Cuentas por pagar">
+				<h4 class="titulo">Cuentas x Pagar</h4>
+			</div>
+			<ul>
+				<li>Depuración de Saldos</li>
+				<li>Registro Cargos/Abonos</li>
+				<li>Consulta Saldos</li>
+				<li>Registro de Compras</li>
+				<li>Registro de Servicios</li>
+				<li>Resumen de Saldos</li>
+				<li>Bonificación de Compras</li>
+				<li>Depuración del Histórico</li>
+				<li>Definición Afectación Contable</li>
+				<li>Aplicación de Afectación Contable</li>
+				<li>Reportes  CxP</li>
+				<li>Listado de Movimientos</li>
+				<li>Análisis de Saldos</li>
+				<li>Auxiliar de Proveedores</li>
+				<li>Históricos</li>
+				<li>Documentos Vencidos</li>
+				<li>Listados CXP</li>
+				<li>Estado de Cuenta CxP</li>
+				<li>Análisis resumido por proveedor</li>
+			</ul>
+		</div>
+		<div class="mdl-cell mdl-cell--6-col">
+			<div class="titulos mdl-shadow--2dp">
+				<img src="assets/Inventarios.png" width="100" height="100" alt="Inventarios">	
+				<h4 class="titulo">Inventarios</h4>
+			</div>
+			<ul>
+				<li>Reportes</li>
+				<li>Lista de Precios de Compra</li>
+				<li>Estadística de Ventas   </li>
+				<li>Lista de Precios Venta </li>
+				<li>Catálogo de Artículos       </li>
+				<li>Inventarios</li>
+				<li>Registra Entradas/Salidas</li>
+				<li>Consultas </li>
+				<li>Histórico de Inventario</li>
+				<li>Reportes</li>
+				<li>Registra Máximos Mínimos</li>
+				<li>Depuración Inventario</li>
+				<li>Depuración Histórico</li>
+				<li>Salidas por traspasos a tiendas</li>
+				<li>Entradas por traspasos de tiendas</li>
+				<li>Clasificación de inventario (multi-almacén)</li>
+			</ul>
+		</div>
+		<div class="mdl-cell mdl-cell--6-col">
+			<div class="titulos mdl-shadow--2dp">
+				<img src="assets/Ventas.png" width="100" height="100" alt="Ventas">
+				<h4 class="titulo">Ventas</h4>
+			</div>
+			<ul>
+				<li>Asigna Caja</li>
+				<li>Asigna Cajero</li>
+				<li>Ventas Mostrador</li>
+				<li>Asignación de Contraseña</li>
+				<li>Cobrar Ventas de Mostrador</li>
+				<li>Otros Ingresos/Egresos</li>
+				<li>Cancelar Ventas Mostrador</li>
+				<li>Corte de Caja</li>
+				<li>Devolución Ventas Mostrador</li>
+				<li>Reimpresión de Tickets</li>
+			</ul>
+		</div>
+		<div class="mdl-cell mdl-cell--6-col">
+			<div class="titulos mdl-shadow--2dp">
+				<img src="assets/Factura Electrica.png" width="100" height="100" alt="Factura Electrónica">
+				<h4 class="titulo">Facturación Electrónica</h4>
+			</div>
+			<ul>
+				<li>Emisión de Facturas</li>
+				<li>Notas de Crédito por Devolución</li>
+				<li>Reportes</li>
+				<ul>
+					<li>Fecha</li>
+					<li>Número de Filial</li>
+					<li>Agente</li>
+				</ul>
+				<li>Comprobantes Emitidos (Informe Mensual)</li>
+				<li>Cancelaciones</li>
+				<li>Nota de Crédito por Bonificación</li>
+				<li>Histórico de Factura</li>
+			</ul>
+		</div>
+		<div class="mdl-cell mdl-cell--6-col">
+			<div class="titulos mdl-shadow--2dp">
+				<img src="assets/Nómina.png" width="100" height="100" alt="Nómina">
+				<h4 class="titulo">Nómina</h4>
+			</div>
+			<ul>
+				<li>Ejercicios</li>
+				<li>Trabajadores</li>
+				<li>Puestos</li>
+				<li>Agrupaciones</li>
+				<li>Conceptos Fijos por Nómina</li>
+				<li>Conceptos Percepciones Deducciones</li>
+				<li>Áreas Departamentos</li>
+				<li>Modificación de Salarios</li>
+				<li>Cargos Abonos Fijos</li>
+				<li>Tablas de ISPT y Subsidio</li>
+				<li>Tablas Integración de Salarios</li>
+				<li>Tablas para Vacaciones</li>
+				<li>Salarios Mínimos</li>
+				<li>Tablas del IMSS</li>
+				<li>Registra Incapacidades</li>
+				<li>Creación nómina</li>
+				<li>Registra Excepciones(Individual)</li>
+				<li>Registra Excepciones(por Concepto)</li>
+				<li>Reporte de Excepciones</li>
+				<li>Cálculo de Nómina</li>
+				<li>Aumentos de Salarios</li>
+				<li>Resumen de Nómina (Por autorizar)</li>
+				<li>Registro de Nómina</li>
+				<li>Cerrar Nómina</li>
+				<li>Recibos de Raya</li>
+				<li>Consulta Acumulados</li>
+				<li>Acumulado de Nóminas</li>
+				<li>Relaciones por Concepto</li>
+				<li>Abrir Nómina</li>
+				<li>Pasa información a excel</li>
+				<li>Crea Salarios Integrados</li>
+				<li>Acumulado</li>
+				<li>Cálculo inverso</li>
+				<li>Afectación Contable</li>
+			</ul>
+		</div>
+		<div class="mdl-cell mdl-cell--6-col">
+			<div class="titulos mdl-shadow--2dp">
+				<img src="assets/Ordenes de Trabajo.png" width="100" height="100" alt="Módulo de Ordenes de Trabajo">
+				<h4 class="titulo">Módulo de Ordenes de Trabajo</h4>
+			</div>
+			<ul>
+				<li>Módulo de Nomina</li>
+				<li>Soporte en Sitio</li>
+				<li>Personalización</li>
+			</ul>
+		</div>
+		<div class="mdl-cell mdl-cell--6-col">
+			<div class="titulos mdl-shadow--2dp">
+				<img src="assets/Otros Servicios.png" width="100" height="100" alt="Servicios adicionales">
+				<h4 class="titulo">Servicios Adicionales</h4>
+			</div>
+			<ul>
+				<li>Personalización de facturación (Adendas, Reportes, etc).</li>
+				<li>Desarrollo de nuevas funcionalidades.</li>
+				<li>Mesa de ayuda de acuerdo a sus necesidades:</li>
+				<ul>
+					<li>De lunes a viernes, horas laborales.</li>
+					<li>Fines de semana.</li>
+					<li>24 x 7.</li>
+				</ul>
+			</ul>
+		</div>
+	</div>
+
 <app-share-article></app-share-article>
 
-<app-comment-box></app-comment-box>
+<br>
+
