--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,13 +15,13 @@
 	<div class="robotoFont titleB">Clientes</div>
 	<div class="mdl-grid">
 		<div class="mdl-cell mdl-cell--4-col contatcs">
-			<img class="clientesImg" src="http://www.grupoelektra.com.mx/images/banco-azteca-logo-grande.png" alt="Banco Azteca" />
+			<img class="clientesImg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Nielsen_logo.svg/1200px-Nielsen_logo.svg.png" alt="Nielsen" />
 		</div>
 		<div class="mdl-cell mdl-cell--4-col contatcs">
-			<img class="clientesImg" src="http://s3-eu-west-1.amazonaws.com/rankia/images/valoraciones/0015/1515/inbursa.jpg?1398879086" alt="Inbursa"/>
+			<img class="clientesImg" src="https://www.izzi.mx/izzi/img/logos/izzi-black.svg" alt="Izzi"/>
 		</div>
 		<div class="mdl-cell mdl-cell--4-col contatcs">
-			<img class="clientesImg" src="https://www.autocompara.com/ExpressoAutoCompara/images/aseg/logo-gnp05.png" alt="GNP" />
+			<img class="clientesImg" src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Alsea_logo.png" alt="Alsea" />
 		</div>
 	</div>
 
