--- a/src/app/components/outsourcing/outsourcing.component.html
+++ b/src/app/components/outsourcing/outsourcing.component.html
@@ -1,5 +1,7 @@
 
 <div class="mdl-card__title robotoFont title mdl-shadow--8dp textColorB">Personal Capacitado OutSourcing</div>
+<br>
+<h3 class="robotoFont textColor">5 años ofreciendo recursos a Cablevisión</h3>
 
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--6-col textColor">
