--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -24,9 +24,9 @@
         <a class="mdl-navigation__link" [routerLink]="['home']">Inicio</a>
         <a class="mdl-navigation__link" [routerLink]="['about']">Acerca de Nosotros</a>
         <a class="mdl-navigation__link" [routerLink]="['services']">Servicios</a>
-        <a class="mdl-navigation__link" [routerLink]="['products']">Productos y Proyectos</a>
+        <a class="mdl-navigation__link" [routerLink]="['products']">Productos</a>
+        <a class="mdl-navigation__link" [routerLink]="['projects']">Proyectos</a>
         <a class="mdl-navigation__link" [routerLink]="['bolsa']">Bolsa de Trabajo</a>
-        <a class="mdl-navigation__link" href="">Contáctanos</a>
       </nav>
 
     </div>
@@ -34,14 +34,12 @@
   <div class="mdl-layout__drawer"> 
     <span class="mdl-layout-title robotoFont">Teambits</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" [routerLink]="['login']">Inicia sesión</a>
-      <a class="mdl-navigation__link" [routerLink]="['newaccount']">Crear Cuenta</a>
       <a class="mdl-navigation__link" [routerLink]="['home']">Inicio</a>
       <a class="mdl-navigation__link" [routerLink]="['about']">Acerca de Nosotros</a>
       <a class="mdl-navigation__link" [routerLink]="['services']">Servicios</a>
-      <a class="mdl-navigation__link" [routerLink]="['products']">Productos y Proyectos</a>
+      <a class="mdl-navigation__link" [routerLink]="['products']">Productos</a>
+      <a class="mdl-navigation__link" [routerLink]="['projects']">Proyectos</a>
       <a class="mdl-navigation__link" [routerLink]="['bolsa']">Bolsa de Trabajo</a>
-      <a class="mdl-navigation__link" href="">Contáctanos</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
