--- a/src/app/components/view-news/view-news.component.html
+++ b/src/app/components/view-news/view-news.component.html
@@ -1,4 +1,6 @@
-<h1 class="titleB robotoFont">{{data.title}}</h1>
-<div class="container">
-    <p class="robotoFont textColor">{{data.content}}</p>
+<div class="container allCont">
+    <h1 class="titleB robotoFont">{{data.title}}</h1>
+    <div class="containerDesc robotoFont textColor">
+        {{data.content}}
+    </div>
 </div>
