--- a/src/app/components/view-notes/view-notes.component.html
+++ b/src/app/components/view-notes/view-notes.component.html
@@ -1,8 +1,10 @@
-
-<div class="contImg mdl-shadow--8dp">
-    <img [src]="data.image" alt="main">
-</div>
-<div class="robotoFont titleB">{{data.title}}</div>
-<div class="container">
-    <p class="robotoFont textColor">{{data.content}}</p>
+<div class="container allCont">
+    <div class="contImg mdl-shadow--8dp">
+        <img [src]="data.image" alt="main">
+    </div>
+    <br>
+    <div class="robotoFont titleB">{{data.title}}</div>
+    <div class="containerDescription robotoFont textColor">
+        {{data.content}}
+    </div>
 </div>
