--- a/src/app/components/productos-yproyectos/productos-yproyectos.component.css
+++ b/src/app/components/productos-yproyectos/productos-yproyectos.component.css
@@ -17,6 +17,7 @@
     background-color: #ff9800;
     padding: 20px;
     margin: 20px;
+    min-width: 100%;
 }
 .containerInfoA h3{
     text-align: center;
