--- a/src/app/components/shared/contacto/contacto.component.html
+++ b/src/app/components/shared/contacto/contacto.component.html
@@ -4,7 +4,7 @@
 		<div class="mdl-cell mdl-cell--4-col">
 
 
-			<form>
+			<form id="formContacto">
 				<div class="form-group">
 					<label for="inputName" class="textColorB robotoFont">* Nombre</label>
 					<input type="name" class="form-control" id="inputName" aria-describedby="nombreHelp" required>
@@ -51,7 +51,7 @@
 				</fieldset>
 				<div class="form-check">
 					<label class="form-check-label textColorB robotoFont">
-						<input type="checkbox" class="form-check-input">
+						<input type="checkbox" class="form-check-input" id="regresarLlamada">
 						Deseo que me regresen la llamada
 					</label>
 				</div>
@@ -71,7 +71,7 @@
 				 No. Interior Pent House 4 Colonia Nápoles Municipio Benito Juárez Estado Ciudad de México México CP.03810</p>
 				 <p>Ing.Javier Rodríguez Morales <br>
 				 Comercialización <br>
-				 javier.rodriguez@bistdev.com.mx <br>
+				 javier.rodriguez@teambits.com.mx <br>
 				 Tel 01 55 5523 9501</p>
 			 </div>
 		</div>
